# yambler

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
.config/: README.md
nix/: README.md  shell.nix
tests/: common.py  test_manifest.py  test_yaml_builder.py
yambler/: manifest.py  yaml_builder.py
